--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="read_mentor">Take a minute to read about your\n mentor's background</string>
+    <string name="about_mentor">Enyason is a student of the University of Uyo, studying
+        Computer Engineering. He has knowledge in Android Apllication development and in Java Programming
+
+
+    </string>
 </resources>
